# ros_arduino

./: LICENSE  package.xml
firmware/: FourCams.ino
launch/: four_cams_trigger.launch
scripts/: four_cams_trigger.py
