<?xml version="1.0"?>
<package format="2">
  <name>ros_arduino</name>
  <version>0.1.0</version>
  <description>The ros_arduino package</description>

  <maintainer email="ozaslan@seas.upenn.edu">Salih Tolga Ozaslan</maintainer>

  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
